// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

// See https://developers.google.com/protocol-buffers for what's going on here.

// buf breaking: ignore (Ignore because plans are currently not persisted.)

syntax = "proto3";

package mz_expr.scalar;

import "google/protobuf/empty.proto";
import "repr/src/adt/array.proto";
import "repr/src/adt/range.proto";
import "repr/src/strconv.proto";

message ProtoDomainLimit {
  oneof kind {
    google.protobuf.Empty none = 1;
    int64 inclusive = 2;
    int64 exclusive = 3;
  }
}

message ProtoEvalError {
  message ProtoUnsupported {
    string feature = 1;
    optional uint64 discussion_no = 2;
  }
  message ProtoInvalidLayer {
    uint64 max_layer = 1;
    int64 val = 2;
  }
  message ProtoInvalidByteSequence {
    string byte_sequence = 1;
    string encoding_name = 2;
  }
  message ProtoInvalidJsonbCast {
    string from = 1;
    string to = 2;
  }
  message ProtoUnsupportedUnits {
    string units = 1;
    string typ = 2;
  }
  message ProtoOutOfDomain {
    ProtoDomainLimit lower = 1;
    ProtoDomainLimit upper = 2;
    string id = 3;
  }
  message ProtoStringValueTooLong {
    string target_type = 1;
    uint64 length = 2;
  }
  message ProtoIncompatibleArrayDimensions {
    message ProtoDims {
      uint64 f0 = 1;
      uint64 f1 = 2;
    }
    ProtoDims dims = 1;
  }
  message ProtoIndexOutOfRange {
    int32 provided = 1;
    int32 valid_end = 2;
  }
  message ProtoInvalidIdentifier {
    string ident = 1;
    optional string detail = 2;
  }
  message ProtoValueOutOfRange {
    string value = 1;
  }
  message ProtoDateDiffOverflow {
    string unit = 1;
    string a = 2;
    string b = 3;
  }
  oneof kind {
    int32 character_not_valid_for_encoding = 1;
    int32 character_too_large_for_encoding = 2;
    string date_bin_out_of_range = 3;
    google.protobuf.Empty division_by_zero = 4;
    ProtoUnsupported unsupported = 5;
    google.protobuf.Empty float_overflow = 6;
    google.protobuf.Empty float_underflow = 7;
    google.protobuf.Empty numeric_field_overflow = 8;
    ProtoValueOutOfRange float32_out_of_range = 9;
    ProtoValueOutOfRange float64_out_of_range = 10;
    ProtoValueOutOfRange int16_out_of_range = 11;
    ProtoValueOutOfRange int32_out_of_range = 12;
    ProtoValueOutOfRange int64_out_of_range = 13;
    ProtoValueOutOfRange oid_out_of_range = 14;
    ProtoValueOutOfRange interval_out_of_range = 15;
    google.protobuf.Empty timestamp_out_of_range = 16;
    google.protobuf.Empty char_out_of_range = 17;
    google.protobuf.Empty invalid_base64_equals = 18;
    uint32 invalid_base64_symbol = 19;
    google.protobuf.Empty invalid_base64_end_sequence = 20;
    string invalid_timezone = 21;
    google.protobuf.Empty invalid_timezone_interval = 22;
    google.protobuf.Empty invalid_timezone_conversion = 23;
    ProtoInvalidLayer invalid_layer = 24;
    mz_repr.adt.array.ProtoInvalidArrayError invalid_array = 25;
    string invalid_encoding_name = 26;
    string invalid_hash_algorithm = 27;
    ProtoInvalidByteSequence invalid_byte_sequence = 28;
    ProtoInvalidJsonbCast invalid_jsonb_cast = 29;
    string invalid_regex = 30;
    uint32 invalid_regex_flag = 31;
    string invalid_parameter_value = 32;
    google.protobuf.Empty neg_sqrt = 33;
    google.protobuf.Empty null_character_not_permitted = 34;
    string unknown_units = 35;
    ProtoUnsupportedUnits unsupported_units = 36;
    google.protobuf.Empty unterminated_like_escape_sequence = 37;
    mz_repr.strconv.ProtoParseError parse = 38;
    mz_repr.strconv.ProtoParseHexError parse_hex = 39;
    string internal = 40;
    string infinity_out_of_domain = 41;
    string negative_out_of_domain = 42;
    string zero_out_of_domain = 43;
    ProtoOutOfDomain out_of_domain = 44;
    string complex_out_of_range = 45;
    google.protobuf.Empty multiple_rows_from_subquery = 46;
    string undefined = 47;
    google.protobuf.Empty like_pattern_too_long = 48;
    google.protobuf.Empty like_escape_too_long = 49;
    ProtoStringValueTooLong string_value_too_long = 50;
    google.protobuf.Empty multidimensional_array_removal_not_supported = 51;
    ProtoIncompatibleArrayDimensions incompatible_array_dimensions = 52;
    string type_from_oid = 53;
    ProtoIndexOutOfRange index_out_of_range = 54;
    ProtoValueOutOfRange uint16_out_of_range = 55;
    ProtoValueOutOfRange uint32_out_of_range = 56;
    ProtoValueOutOfRange uint64_out_of_range = 57;
    google.protobuf.Empty date_out_of_range = 58;
    ProtoValueOutOfRange mz_timestamp_out_of_range = 59;
    google.protobuf.Empty mz_timestamp_step_overflow = 60;
    google.protobuf.Empty timestamp_cannot_be_nan = 61;
    mz_repr.adt.range.ProtoInvalidRangeError invalid_range = 62;
    string invalid_role_id = 63;
    string invalid_privileges = 64;
    string wmr_recursion_limit_exceeded = 65;
    google.protobuf.Empty multi_dimensional_array_search = 66;
    string must_not_be_null = 67;
    ProtoInvalidIdentifier invalid_identifier = 68;
    google.protobuf.Empty array_fill_wrong_array_subscripts = 69;
    uint64 max_array_size_exceeded = 70;
    string invalid_date_part = 71;
    ProtoDateDiffOverflow date_diff_overflow = 72;
    string if_null_error = 73;
    google.protobuf.Empty length_too_large = 74;
    google.protobuf.Empty acl_array_null_element = 75;
    google.protobuf.Empty mz_acl_array_null_element = 76;
    string invalid_iana_timezone_id = 77;
    string pretty_error = 78;
    google.protobuf.Empty neg_limit = 79;
    google.protobuf.Empty key_cannot_be_null = 80;
  }
}
